--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -1,13 +1,17 @@
 include(${PROJECT_SOURCE_DIR}/cmake/add_um2_benchmark.cmake)
 
-add_um2_benchmark(./sort.cpp)
+#===============================================================================
+# stdlib 
+#===============================================================================
+
+add_um2_benchmark(./stdlib/exp.cpp)
+add_um2_benchmark(./stdlib/sqrt.cpp)
+add_um2_benchmark(./stdlib/sort.cpp)
 
 #===============================================================================
 # math 
 #===============================================================================
 
-add_um2_benchmark(./math/exp.cpp)
-add_um2_benchmark(./math/sqrt.cpp)
 add_um2_benchmark(./math/Vec2.cpp)
 
 #===============================================================================
