WIP: Update shared memeory parallelism

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
         shell: bash
         run: |
           sudo apt -y update
-          sudo apt install -y libhdf5-dev libpugixml-dev
+          sudo apt install -y libhdf5-dev libpugixml-dev libtbb-dev
 
       - name: gcc
         shell: bash
