--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -43,6 +43,9 @@ endif()
 
 add_um2_test(./geometry/Point.cpp)
 add_um2_test(./geometry/morton_sort_points.cpp)
+if (UM2_USE_TBB OR UM2_USE_CUDA)
+  add_um2_test(./parallel/geometry/parallel_morton_sort_points.cpp)
+endif()
 add_um2_test(./geometry/AxisAlignedBox.cpp)
 add_um2_test(./geometry/LineSegment.cpp)
 add_um2_test(./geometry/Triangle.cpp)
