--- a/cmake/config.hpp.in
+++ b/cmake/config.hpp.in
@@ -10,8 +10,8 @@
 // CMake defines
 //==============================================================================
 
-//// OpenMP
-//#cmakedefine01 UM2_USE_OPENMP
+// OpenMP
+#cmakedefine01 UM2_USE_OPENMP
 
 // TBB
 #cmakedefine01 UM2_USE_TBB
@@ -50,7 +50,6 @@
 #undef HOSTDEV
 #undef GLOBAL
 #if UM2_USE_CUDA
-#  include <cuda_runtime.h>
 #  define HOST    __host__
 #  define DEVICE  __device__
 #  define HOSTDEV __host__ __device__
@@ -105,3 +104,15 @@ template <class... T>
 constexpr bool always_false = false;
 
 // NOLINTEND(modernize-macro-to-enum)
+
+//==============================================================================
+// Includes
+//==============================================================================
+
+#if UM2_USE_OPENMP
+#  include <omp.h>
+#endif
+
+#if UM2_USE_CUDA
+#  include <cuda_runtime.h>
+#endif
