--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,12 @@ project(
   LANGUAGES CXX)
 
 # Allow user to specify <project>_ROOT variables
-cmake_policy(SET CMP0144 NEW)
+# Allow user to specify <project>_ROOT variables
+if (CMAKE_VERSION VERSION_GREATER_EQUAL 3.27)
+  cmake_policy(SET CMP0144 NEW)
+else()
+  cmake_policy(SET CMP0074 NEW)
+endif()
 
 # Set module path
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules)
