--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -7,3 +7,4 @@ include(${PROJECT_SOURCE_DIR}/cmake/add_um2_tutorial.cmake)
 add_um2_tutorial(./2d/1a_model.cpp)
 add_um2_tutorial(./2d/1a_mesh.cpp)
 add_um2_tutorial(./2d/2a_nogap_model.cpp)
+add_um2_tutorial(./2d/2a_nogap_mesh.cpp)
