--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -8,3 +8,4 @@ add_um2_tutorial(./2d/1a_model.cpp)
 add_um2_tutorial(./2d/1a_mesh.cpp)
 add_um2_tutorial(./2d/2a_nogap_model.cpp)
 add_um2_tutorial(./2d/2a_nogap_mesh.cpp)
+add_um2_tutorial(./2d/2a.cpp)
