--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -9,3 +9,5 @@ add_um2_tutorial(./2d/1a_mesh.cpp)
 add_um2_tutorial(./2d/2a_nogap_model.cpp)
 add_um2_tutorial(./2d/2a_nogap_mesh.cpp)
 add_um2_tutorial(./2d/2a.cpp)
+add_um2_tutorial(./2d/c5g7_2d.cpp)
+add_um2_tutorial(./2d/crocus_2d.cpp)
