--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -11,3 +11,9 @@ add_um2_tutorial(./2d/2a_nogap_mesh.cpp)
 add_um2_tutorial(./2d/2a.cpp)
 add_um2_tutorial(./2d/c5g7_2d.cpp)
 add_um2_tutorial(./2d/crocus_2d.cpp)
+
+#==============================================================================
+# 3D
+#==============================================================================
+
+add_um2_tutorial(./3d/c5g7.cpp)
