--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,4 +3,9 @@ include(${PROJECT_SOURCE_DIR}/cmake/add_um2_example.cmake)
 #==============================================================================
 # Ford Nuclear Reactor 
 #==============================================================================
-add_um2_example(./fnr/fnr_2d.cpp)
+#add_um2_example(./fnr/fnr_2d.cpp)
+
+#==============================================================================
+# CROCUS
+#==============================================================================
+add_um2_example(./crocus/3d_NECTAR_OCRefl_make_cad_model.cpp)
