--- a/cmake/config.hpp.in
+++ b/cmake/config.hpp.in
@@ -36,6 +36,18 @@
 #define MIN_LOG_LEVEL @UM2_MIN_LOG_LEVEL@
 
 //==============================================================================
+// Includes
+//==============================================================================
+
+#if UM2_USE_OPENMP
+#  include <omp.h>
+#endif
+
+#if UM2_USE_CUDA
+#  include <cuda_runtime.h>
+#endif
+
+//==============================================================================
 // Attributes
 //==============================================================================
 
@@ -72,11 +84,12 @@
 // Typedefs
 //==============================================================================
 
+// Integer type for indices and integers in API.
 #if UM2_ENABLE_INT64
 using Size = int64_t; // Index type
 using Int = int64_t;  // Integer type in API
 
-consteval auto
+HOSTDEV consteval auto
 sizeMax() -> Size
 {
   return 0x7FFFFFFFFFFFFFFF;
@@ -88,13 +101,14 @@ using Size = int32_t; // Index type
 using Int = int32_t;  // Integer type in API
 
 consteval auto
-sizeMax() -> Size
+HOSTDEV sizeMax() -> Size
 {
   return 0x7FFFFFFF;
 }
 
 #endif
 
+// Floating point type in API.
 #if UM2_ENABLE_FLOAT64
 using Float = double; // Floating point type in API
 #else
@@ -104,9 +118,12 @@ using Float = float; // Floating point type in API
 // Integer type for material IDs.
 using MaterialID = int8_t;
 
+// For static_asserts which are always false.
 template <class... T>
 constexpr bool always_false = false;
 
+// A concept for fundamental types, which surprisingly doesn't exist in the
+// standard library.
 namespace um2
 {
   template <class T>
@@ -114,15 +131,3 @@ namespace um2
 } // namespace um2
 
 // NOLINTEND(modernize-macro-to-enum)
-
-//==============================================================================
-// Includes
-//==============================================================================
-
-#if UM2_USE_OPENMP
-#  include <omp.h>
-#endif
-
-#if UM2_USE_CUDA
-#  include <cuda_runtime.h>
-#endif
