WIP: MeshFile -> PolytopeSoup

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -63,7 +63,7 @@ add_um2_test(./mesh/RegularPartition.cpp)
 add_um2_test(./mesh/RectilinearGrid.cpp)
 add_um2_test(./mesh/RectilinearPartition.cpp)
 add_um2_test(./mesh/PolytopeSoup.cpp)
-#add_um2_test(./mesh/TriMesh.cpp)
+add_um2_test(./mesh/TriMesh.cpp)
 #add_um2_test(./mesh/QuadMesh.cpp)
 #add_um2_test(./mesh/QuadraticTriMesh.cpp)
 #add_um2_test(./mesh/QuadraticQuadMesh.cpp)
